make global style for white color, add spacing between profiles, fix button sizing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 :root {
   font-size: 18px;
+  --white: #ffffff;
 }
 
 html,
